--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: "Intro to Designing Effective Data Visualizations"
+title: Intro to Designing Effective Data Visualizations
 subtitle: 'DASH Workshop Series'
 
 remote_theme: scds/just-the-docs
