--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: Intro to Data Visualizations
+title: "Intro to Data Visualizations"
 subtitle: 'DASH Workshop Series'
 
 remote_theme: scds/just-the-docs
